-issue#3141: Fix FreeBSD IPv6 ping
-issue#3547: Database Audit utility does not check database permissions
-issue#3559: When a developer uses backtracing, HTML output can be seen from command line
-issue#3560: When using `input_validate_xxx`, calls to `die_html_input_error()` do not pass variable name
-issue#5019: Install SQL Statements with Database name should be quoted
-issue#5216: 1.3.0 - QA DSSTATS does not use the RRDtool Proxy stateful socket connection
-issue#5221: ss_fping.php script times out when there is a lot of packet loss
-issue#5264: The Net-SNMP Disk I/O Templates are not Cluster Aware
-issue#5481: Attempting to edit a Data Query that does not exist throws warnings and not an GUI error
-issue#5511: Allow automation network to be saved when the IP Addresses to ignore box is empty
-issue#5517: Cacti 1.3.x will not support 'Remember me' functionality without using https
-issue#5567: Incorrect variable name in change_device cli script
-issue#5570: RRDChecker is started very often
-issue#5573: Incorrect URL for editing graph template
-issue#5639: Add tooltip info about IPv6 address
-issue#5680: Fix Spikekill not following correct time in schedule
-issue#5776: Undefined array key "description" in file settings.php
-issue#5844: Automation fails when using MySQL 8
-issue#5885: Fix Fortigate and Aruba OSCX switch template, improve Clearpass template
-issue#5899: Tooltip remain on page after page is refreshed
-issue#5900: Please add the ability to select compiled RRDtool v1.9+
-issue#5936: If a Remote Data Collector has not devices, poller.php does not properly register any collectors
-feature#412: Import Export for Graph and Tree rules
-feature#1214: Move Tree Create/Remove/Modify Functions to lib/api_tree.php
-feature#1361: UI should update alternate row colors
-feature#1398: Implement an interactive web based Plugin upgrade process
-feature#1442: Add validation to GUI inputs
-feature#1523: Value above RRD maximum value